bindings/ruby/lib/revault/binding_operations.rb

# Generated complete binary operation layer. Do not edit.
require 'fiddle'
require 'fiddle/import'
require_relative 'domain_models'
require_relative 'native_library'

module Revault
  module Native
    extend Fiddle::Importer
    dlload Revault::NativeLibrary.path
    BufferStruct = struct ['void *ptr', 'size_t len']
    extern 'uint32_t api_abi_version(void)'
    extern 'const char * buffer_last_error(void)'
    extern 'bool secret_len(void *, size_t *)'
    extern 'bool secret_copy(void *, void *, size_t)'
    extern 'void secret_free(void *)'
    extern 'uint16_t lockbox_format_version(void)'
    extern 'uint16_t lockbox_probe_format_version(void *, size_t)'
    extern 'void * lockbox_create(void *, size_t)'
    extern 'void * lockbox_create_with_options(void *, size_t, void *, size_t, uint64_t, void *, size_t, void *, size_t, size_t)'
    extern 'void * lockbox_create_password(void *, size_t)'
    extern 'void * lockbox_create_contact(void *)'
    extern 'void * lockbox_create_with_signing_key(void *, size_t, void *)'
    extern 'void * lockbox_open(void *, size_t, void *, size_t)'
    extern 'void * lockbox_open_with_options(void *, size_t, void *, size_t, void *, size_t, uint64_t, void *, size_t, void *, size_t, size_t)'
    extern 'void * lockbox_open_password(void *, size_t, void *, size_t)'
    extern 'void * lockbox_open_contact(void *, size_t, void *)'
    extern 'bool lockbox_add_file(void *, void *, size_t, void *, size_t, bool)'
    extern 'bool lockbox_add_file_with_permissions(void *, void *, size_t, void *, size_t, uint32_t, bool)'
    extern 'bool lockbox_extract_file(void *, void *, size_t, void *, size_t, bool)'
    extern 'bool lockbox_extract_directory(void *, void *, size_t, uint64_t, uint64_t, size_t, bool, bool, bool)'
    extern 'bool lockbox_reset_import_stats(void *)'
    extern 'uint64_t lockbox_storage_len(void *)'
    extern 'bool lockbox_set_workload_profile(void *, void *, size_t)'
    extern 'bool lockbox_set_worker_policy(void *, void *, size_t, size_t)'
    extern 'bool lockbox_commit(void *)'
    extern 'bool lockbox_create_dir(void *, void *, size_t, bool)'
    extern 'bool lockbox_delete(void *, void *, size_t)'
    extern 'bool lockbox_remove_dir(void *, void *, size_t, bool)'
    extern 'bool lockbox_create_parent_dirs(void *, void *, size_t)'
    extern 'bool lockbox_rename(void *, void *, size_t, void *, size_t)'
    extern 'bool lockbox_set_variable(void *, void *, size_t, void *, size_t)'
    extern 'bool lockbox_set_secret_variable(void *, void *, size_t, void *, size_t)'
    extern 'bool lockbox_get_secret_variable(void *, void *, size_t, void *)'
    extern 'bool lockbox_delete_variable(void *, void *, size_t)'
    extern 'bool lockbox_move_variables(void *, void *, size_t)'
    extern 'bool lockbox_add_symlink(void *, void *, size_t, void *, size_t, bool)'
    extern 'bool lockbox_exists(void *, void *, size_t)'
    extern 'bool lockbox_is_dir(void *, void *, size_t)'
    extern 'uint32_t lockbox_permissions(void *, void *, size_t)'
    extern 'bool lockbox_set_permissions(void *, void *, size_t, uint32_t)'
    extern 'void * lockbox_recovery_salvage(void *, size_t, void *, size_t, void *)'
    extern 'uint64_t lockbox_add_password(void *, void *, size_t)'
    extern 'uint64_t lockbox_add_contact(void *, void *, void *, size_t)'
    extern 'bool lockbox_delete_key(void *, uint64_t)'
    extern 'bool lockbox_set_owner_signing_key(void *, void *)'
    extern 'bool lockbox_set_form_field(void *, void *, size_t, void *, size_t, void *, size_t)'
    extern 'bool lockbox_set_secret_form_field(void *, void *, size_t, void *, size_t, void *, size_t)'
    extern 'bool lockbox_get_secret_form_field(void *, void *, size_t, void *, size_t, void *)'
    extern 'bool lockbox_delete_form_record(void *, void *, size_t)'
    extern 'bool lockbox_move_form_records(void *, void *, size_t)'
    extern 'void lockbox_free(void *)'
    extern 'bool vault_is_running(void)'
    extern 'bool vault_forget_all(void)'
    extern 'void * key_contact_generate(void)'
    extern 'void * key_contact_from_private(void *, size_t)'
    extern 'void * key_contact_public_from_bytes(void *, size_t)'
    extern 'void key_contact_public_free(void *)'
    extern 'void key_contact_free(void *)'
    extern 'void * key_contact_encrypt(void *, void *, size_t)'
    extern 'void key_contact_wrapped_free(void *)'
    extern 'void * key_signing_generate(void)'
    extern 'void * key_signing_from_private(void *, size_t)'
    extern 'void * key_signing_public_from_bytes(void *, size_t)'
    extern 'void key_signing_public_free(void *)'
    extern 'void key_signing_free(void *)'
    extern 'void * vault_key_import_private(void *, size_t)'
    extern 'void * vault_key_import_public(void *, size_t)'
    extern 'void * vault_directory_open(void *, size_t, void *, size_t)'
    extern 'uint32_t vault_structure_version_current(void)'
    extern 'uint32_t vault_directory_probe_structure_version(void *, size_t, void *, size_t)'
    extern 'void * vault_directory_open_or_create_default(void *, size_t)'
    extern 'void * vault_directory_replace_default(void *, size_t)'
    extern 'bool vault_directory_change_password(void *, size_t, void *, size_t, void *, size_t)'
    extern 'bool vault_directory_change_default_password(void *, size_t, void *, size_t)'
    extern 'void * vault_directory_replace(void *, size_t, void *, size_t)'
    extern 'void * vault_directory_open_or_create(void *, size_t, void *, size_t)'
    extern 'uint32_t vault_directory_structure_version(void *)'
    extern 'bool vault_directory_private_key_exists(void *, void *, size_t)'
    extern 'bool vault_directory_delete_private_key(void *, void *, size_t)'
    extern 'bool vault_directory_store_private_key(void *, void *, size_t, void *)'
    extern 'void * vault_directory_load_private_key(void *, void *, size_t)'
    extern 'void * vault_directory_load_private_key_generation(void *, void *, size_t, uint16_t)'
    extern 'bool vault_directory_store_contact(void *, void *, size_t, void *)'
    extern 'void * vault_directory_load_contact(void *, void *, size_t)'
    extern 'bool vault_directory_contact_exists(void *, void *, size_t)'
    extern 'bool vault_directory_delete_contact(void *, void *, size_t)'
    extern 'bool vault_directory_store_profile_email(void *, void *, size_t, void *, size_t)'
    extern 'bool vault_directory_store_backup(void *, void *, size_t, void *, size_t)'
    extern 'uint64_t vault_directory_backup_count(void *)'
    extern 'bool vault_directory_restore_private_key(void *, void *, size_t, void *, void *, bool)'
    extern 'void * vault_directory_load_owner_signing_key(void *, void *, size_t)'
    extern 'void * vault_directory_load_owner_signing_key_generation(void *, void *, size_t, uint16_t)'
    extern 'bool vault_directory_store_contact_signing_key(void *, void *, size_t, void *)'
    extern 'void * vault_directory_load_contact_signing_key(void *, void *, size_t)'
    extern 'bool vault_directory_remember_lockbox(void *, void *, size_t, void *, size_t)'
    extern 'bool vault_directory_forget_lockbox(void *, void *, size_t)'
    extern 'bool vault_directory_remember_access_slot_label(void *, void *, size_t, uint64_t, void *, size_t)'
    extern 'bool vault_directory_forget_access_slot_label(void *, void *, size_t, uint64_t)'
    extern 'size_t vault_directory_seed_forms(void *)'
    extern 'bool vault_directory_remember_password(void *, void *, size_t, void *, size_t)'
    extern 'void vault_directory_free(void *)'
    extern 'void * vault_read_only_open(void *, size_t, void *, size_t)'
    extern 'void * vault_read_only_open_default(void *, size_t)'
    extern 'void vault_read_only_free(void *)'
    extern 'bool vault_agent_serve(void)'
    extern 'bool vault_agent_verify_transport(void)'
    extern 'bool vault_agent_put(void *, size_t, void *, size_t)'
    extern 'bool vault_agent_forget(void *, size_t)'
    extern 'bool vault_agent_stop(void)'
    extern 'bool vault_agent_start(void)'
    extern 'bool vault_platform_set_scope(void *, size_t)'
    extern 'bool vault_platform_forget_password(void)'
    extern 'bool vault_platform_put_password(void *, size_t)'
    extern 'bool vault_platform_enable(void)'
    extern 'bool vault_platform_disable(void)'
    extern 'bool vault_platform_disabled(void)'
    extern 'bool vault_agent_put_vault_unlock_key(void *, size_t, void *, size_t, uint64_t)'
    extern 'bool vault_agent_forget_vault_unlock_key(void *, size_t)'
    extern 'void * vault_agent_get_owner_signing_key(void *, size_t, void *, size_t)'
    extern 'bool vault_agent_put_owner_signing_key(void *, size_t, void *, size_t, void *, uint64_t)'
    extern 'bool vault_agent_forget_owner_signing_key(void *, size_t, void *, size_t)'
    extern 'void * vault_agent_begin_activity(void *, size_t)'
    extern 'void vault_agent_end_activity(void *)'
    extern 'void * vault_local(void)'
    extern 'void * vault_create_lockbox_password(void *, void *, size_t, void *, size_t)'
    extern 'void * vault_open_lockbox_password(void *, void *, size_t, void *, size_t)'
    extern 'void * vault_create_lockbox_content_key(void *, void *, size_t, void *, size_t, void *)'
    extern 'void * vault_create_lockbox_contact(void *, void *, size_t, void *, void *, size_t, void *)'
    extern 'void * vault_open_lockbox_content_key(void *, void *, size_t, void *, size_t, void *)'
    extern 'bool vault_cache_lockbox_password(void *, void *, size_t, void *, size_t, uint64_t)'
    extern 'bool vault_close_lockbox(void *, void *, size_t)'
    extern 'bool vault_close_all(void *)'
    extern 'void vault_free(void *)'
  end
